--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,25 @@
   display: flex;
   flex-direction: column;
 }
+.first-div{
+  display: flex;
+  justify-content: space-between;
+}
+.task-two {
+  font-size: 25px;
+    cursor: pointer;
+    background: #07c707;
+    color: white;
+    padding: 5px 12px;
+    font-weight: bold;
+    border-radius: 5px;
+
+}
+
+
+
+.chart{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
